keycloak-13-mssql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak2
  labels:
    app: keycloak2
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak2
  type: LoadBalancer
