keycloak-13-mssql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak2
spec:
  tls:
    - hosts:
      - ashis.pd.com
  rules:
  - host: ashis.pd.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak2
            port:
              number: 8080
